# police_racial_profiling

./: README.md  clean_delimiters.ipynb  pyproject.toml
code/: 2022H1 Analysis.ipynb  BIC.ipynb  BasicStats.ipynb  Data Ingestion.ipynb  FirstDataset.ipynb  IncidentReports.ipynb  eda.ipynb  hit_rates.ipynb  veil_of_darkness.ipynb
code/analysis/: bayesMCprep.ipynb  bayes_binomial.py  grouping.py  populations.py  ratios.py
code/integrity/: compliance.py  correlations.py  temporal.py
code/loaders/: cityprotect.py  cityprotect.py~  losaltos.py  mountainview.py
code/plotting/: lare_matplot.py  plot_utils.py
code/testing/: bayes_binomial_mc.ipynb  bayes_binomial_mc.py  test_integrity.py  test_ratios.py
data/: data_sources.txt
data/clean_data/: LAPD_RIPA_DATA_202101_202206.csv  LAPD_RIPA_DATA_202101_202206.xlsx  LAPD_RIPA_DATA_2022.csv  LAPD_RIPA_DATA_2023.csv  MVPD_RIPA_2022.csv  MVPD_RIPA_2023_Q1.csv  MVPD_RIPA_2023_Q2.csv  MVPD_RIPA_2023_Q3.csv  SCCSheriff_2023Q1-3_inferred_cities.pkl  lapd_ripa_raw_data_02012021_-_08312021.xlsx  mph_categorized.csv  numbers_categorized.csv
data/raw_data/: Apr_Jun_2020_Los_Altos_Police_Department_report.csv  LAPD RIPA DATA 2021.csv  oakland.csv  (+25 more)
notebooks/: 2022H1 Display.ipynb  Crime Rates Over Time.ipynb  Data Ingestion.ipynb  FirstDataset.ipynb  Incident Reports LAH.ipynb  Incident Reports SCC Sheriff.ipynb  IncidentReports.ipynb  InferCitiesForSCCSheriff.ipynb  Jan23_Analysis.ipynb  Untitled.ipynb  Untitled1.ipynb  eda.ipynb  relative_stop_rates.eps  test_df.csv  test_df_2.csv  testingthetests.ipynb  veil_of_darkness.ipynb
(+108 files in other folders)
